--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 /*
 	Theme Name: Babienko
-	Description: A theme for Babienko Architects
-	Version: 1
+	Theme URI: http://ericandren.com/
+	Description: Custom theme for Babienko Architects by Oz.
+	Version: 1.0.0
 	Author: Eric Andren (@ozpoo)
+	Author URI: http://ericandren.com
+	Tags: Gulp, Babienko, Blank, HTML5, CSS3
+  GitHub Theme URI: ozpoo/babienko
 
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
