--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1176,6 +1176,7 @@ button {
 
   .grid-wrap {
     padding: 0;
+    padding-bottom: 20vh;
   }
 
   .grid {
@@ -1183,6 +1184,7 @@ button {
     .grid-item {
       width: 100%;
       padding: $unit-4;
+      padding-bottom: 0;
     }
   }
 
@@ -1196,7 +1198,7 @@ button {
 
   .single {
     .project-grid {
-      padding: $unit-1;
+      padding: $unit-2;
     }
 
     .description {
@@ -1236,6 +1238,7 @@ button {
       figure {
         width: 100%;
         height: 100%;
+        padding-bottom: 0;
       }
     }
 
