--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1197,6 +1197,46 @@ button {
   }
 
   .single {
+    .description {
+      display: flex;
+      position: fixed;
+      top: auto;
+      bottom: 0px;
+      left: 0px;
+      align-items: center;
+      justify-content: center;
+      width: 100vw;
+      height: 80vh;
+      padding: 0;
+      overflow: hidden;
+      backface-visibility: hidden;
+      opacity: 0;
+      pointer-events: none;
+      transition: 660ms opacity cubic-bezier(.165, .84, .44, 1);
+      will-change: opacity;
+      z-index: 10001;
+
+      &.show {
+        opacity: 1;
+        pointer-events: all;
+      }
+
+      .content {
+        -webkit-overflow-scrolling: touch;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+        padding: $unit-4;
+        overflow: scroll;
+        background: rgba(235,0,69,.9);
+        color: $grey;
+        font-size: 1.2em;
+        font-weight: 200;
+        line-height: 1.5;
+      }
+    }
+
     .project-grid {
       padding: $unit-2;
     }
@@ -1302,45 +1342,6 @@ button {
           font-size: 1.2em;
           font-weight: 200;
           line-height: 1.5;
-
-          &::-webkit-scrollbar {
-            display: none;
-          }
-          .modal-close {
-            position: absolute;
-            top: 0px;
-            right: 0px;
-
-            button {
-              position: relative;
-              top: 0px;
-              right: 0px;
-              width: 40px;
-              height: 40px;
-
-              .one {
-                display: block;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 100%;
-                height: 1px;
-                transform: translate3d(-50%,-50%,0) rotate(-45deg);
-                background: $grey;
-              }
-
-              .two {
-                display: block;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 100%;
-                height: 1px;
-                transform: translate3d(-50%,-50%,0) rotate(45deg);
-                background: $grey;
-              }
-            }
-          }
         }
       }
     }
@@ -1349,10 +1350,13 @@ button {
       display: block;
       margin: 0px;
       padding: 0;
+      padding-bottom: 20vh;
 
       .person {
         width: 100%;
+        margin-bottom: 0px;
         padding: $unit-4;
+        padding-bottom: 0px;
       }
     }
 
@@ -1370,7 +1374,7 @@ button {
       position: relative;
       width: 100vw;
       height: auto;
-      padding: $unit-1;
+      padding: $unit-4;
 
       .container {
         margin-bottom: $unit-4;
@@ -1386,10 +1390,10 @@ button {
 
     .right {
       margin-left: 0vw;
-      padding: $unit-1;
+      padding: $unit-4;
 
       p {
-        margin: $unit-1;
+        margin: $unit-2;
       }
 
       .news-post {
